bugfix dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ hgroup {
   grid-column-start: 2;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  row-gap: calc(1rem-10px); /*wegen box shadow*/
+  row-gap: calc(1rem-10px); /* wegen box shadow */
   -moz-column-gap: 1rem;
   column-gap: 1rem;
   justify-items: center;
@@ -622,6 +622,7 @@ footer a:hover {
 
   .polaroid figure,
   .polaroid a figure {
+    background-color: hsl(218, 60%, 10%);
     border: 15px solid hsl(218, 60%, 10%);
     box-shadow: 0 0 2px white;
   }
